<resources>
    <string name="app_name">Tabu teokratyczne</string>
    <string name="testowe">Pole testowe</string>
    <string name="losujHasloButton">Losuj hasło</string>
    <string name="bladObrazka">Nie można załadować obrazka</string>
    <string name="zgadniete">Udało się zgadnąć?</string>
    <string name="tak">TAK</string>
    <string name="nie">NIE</string>
    <string name="biblioteczka">Biblioteczka internetowa</string>
    <string name="koniecCzasu">Koniec czasu!</string>
    <string name="pozostalo">Pozostało: </string>
    <string name="sekund"> sekund</string>
    <string name="server_client_id">452173695282-ppj5c58ack634oho9r81rtrfmi7cvb5r.apps.googleusercontent.com</string>
    <string name="witaj">Witaj </string>
    <string name="masz">Masz </string>
    <string name="pkt"> pkt.</string>
    <string name="blad_aktualizacji">Nie wysłano aktualizacji hasła</string>
    <string name="gra">Graj</string>
    <string name="ranking">Ranking</string>
    <string name="wyloguj">Wyloguj</string>
    <string name="profil">Mój profil</string>
    <string name="wyjdz">Wyjście</string>
    <string name="wyjdz_nie">Nie, zostaję</string>
    <string name="wyjdz_tak">Tak, wychodzę</string>
    <string name="wyjdz_pytanie">Chcesz wyjść?</string>
    <string name="pytajnik">Pytajnik</string>
    <string name="ksiazka">Książka</string>
</resources>
