<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true">

    <RelativeLayout
        android:id="@+id/movableArea"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/leftMenu"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="-100dp"
        android:gravity="center">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/frag_gra"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gra" />

                <Button
                    android:id="@+id/profil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profil" />

                <Button
                    android:id="@+id/frag_ranking"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ranking" />


                <Button
                    android:id="@+id/wyloguj"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wyloguj" />

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/navigationBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginRight="0dp"
        android:layout_toRightOf="@+id/leftMenu">


        <ImageButton
            android:id="@+id/btnMenu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:paddingRight="40dp"
            android:src="@drawable/hamburger" />


        <TextView
            android:id="@+id/pageTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/btnMenu"
            android:gravity="center_horizontal"
            android:text="test" />


    </RelativeLayout>

</RelativeLayout>